# edutoolkit

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  mainmenu.py
src/menu/: mainmenu.py  widgets.py
src/network/: __main__.py  network.py
src/utils/: utils.py
