[tool.poetry]
name = "edutoolkit"
version = "0.1.0"
description = "Sysadmin tools for schools in \"Departament d'Educació de Catalunya\""
authors = ["Alex Garcia <alexgarciavila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.4"
WMI = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
